# local-content-processor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  啟動 lcp.command
.github/workflows/: ci.yml  release.yml
docs/: 2026-06-17-content-pipeline-upgrade-PR5-review-guide.md  2026-06-17-dewatermark-go-no-go-runbook.md  2026-06-17-session-handoff.md  2026-06-18-e2e-operator-runbook.md  2026-06-22-pypi-release-runbook.md
docs/brainstorms/: 2026-06-16-frontend-ui-ux-deep-plan.md  2026-06-16-local-content-processor-requirements.md  2026-06-17-accumulation-dashboard-requirements.md  2026-06-17-content-pipeline-upgrade-requirements.md  2026-06-22-gossip-pipeline-core-requirements.md  2026-06-22-lcp-extensibility-robustness-requirements.md  2026-06-24-gui-redesign-requirements.md
docs/plans/: 2026-06-16-001-feat-local-content-processor-mvp-plan.md  2026-06-16-002-refactor-mypy-core-typing-plan.md  2026-06-16-003-feat-operator-gui-uiux-plan.md  2026-06-17-001-feat-accumulation-dashboard-plan.md  2026-06-17-002-feat-content-pipeline-upgrade-plan.md  2026-06-17-003-refactor-cut-dewatermark-pipeline-plan.md  2026-06-17-004-refactor-architecture-perf-typegate-plan.md  2026-06-17-gui-visual-elevation-plan.md  2026-06-18-001-fix-stabilize-and-harden-pipeline-plan.md  2026-06-18-002-feat-e2e-runnable-pipeline-plan.md  2026-06-18-003-refactor-gui-localhost-webui-plan.md  2026-06-18-004-fix-cli-config-path-discovery-plan.md  2026-06-18-005-fix-bug-sweep-plan.md  2026-06-22-001-feat-gossip-pipeline-core-plan.md  2026-06-22-002-feat-auto-publish-pipeline-plan.md  2026-06-22-003-refactor-engine-extensibility-robustness-plan.md  2026-06-22-004-feat-distribution-devex-quality-plan.md  2026-06-22-005-feat-productionization-finish-plan.md  2026-06-23-001-refactor-parallel-optimization-sweep-plan.md  2026-06-23-002-feat-editorial-sop-workflow-integration-plan.md  2026-06-23-002-feat-gossip-article-format-spec-plan.md  2026-06-23-004-feat-pipeline-ux-streamline-plan.md  2026-06-24-001-feat-realtime-job-progress-plan.md  2026-06-24-001-fix-crawl-failed-url-preserve-plan.md  2026-06-24-002-feat-gui-visual-redesign-plan.md  2026-06-24-003-refactor-remove-reviewers-whitelist-plan.md
docs/qa/: 2026-06-17-operator-gui-p0-window-qa.md
docs/security/: pii-inventory.md
docs/solutions/: atomic-write-temp-replace.md  begin-immediate-isolation-level.md  crawl-failed-retry-url-prefill-2026-06-24.md  fail-closed-catch-at-gate-boundary.md  localhost-http-api-csrf-defense.md  mypy-from-venv-not-pyenv.md  real-happy-path-unreachable-masked-by-green-tests.md  release-version-tag-single-source-and-fail-closed-chain.md  unit-tests-mask-integration-bugs.md
docs/spec/: 远程内容编辑发布流程SOP_新媒体版.md
gossip_scraper/: __main__.py  models.py  snapshot.py
gossip_scraper/core/: alerts.py  category.py  dashboard.py  dedup.py  generator.py  geo.py  health.py  ranking.py  sentiment.py  summary.py  trend.py
gossip_scraper/scrapers/: baidu.py  base.py  bbc_chinese.py  bilibili.py  bilibili_popular.py  bing_news.py  douban_celeb.py  douban_movie.py  douyin.py  dw_chinese.py  netease.py  ptt.py  rfi.py  sina.py  tieba.py  toutiao.py  weibo.py
samples/demo-001/: body.txt  title.txt
scripts/: check_tag_matches_version.py
spikes/benchmark/: README.md  run.py
spikes/detection_accuracy/: README.md  run_eval.py  sample_labeled.jsonl
spikes/dewatermark/: README.md  make_mask.py  run_eval.py
spikes/dewatermark/samples/: .gitignore  README.md
src/lcp/: __init__.py  cli.py  cli_helpers.py  gui.py  pipeline.py  runtime_hardening.py  webserver.py
src/lcp/adapters/: __init__.py  clock.py  (+1 more)
tests/: test_audit_aggregate.py  test_audit_log.py  test_best_effort_deletion.py  test_cli_auto_job_id.py  test_cli_config_discovery.py  test_cli_gui_launch.py  test_cli_gui_parity.py  test_cli_ingest_gossip.py  test_cli_init.py  test_cli_skeleton.py  test_cli_watermark_template.py  test_clock.py  test_config.py  test_config_io.py  test_crawl_runner.py  test_crawl_seam_ssrf.py  test_dewatermark_attestation.py  test_e2e_fail_closed.py  test_e2e_pipeline.py  test_freeze_binding.py  test_gossip_ingest.py  test_gossip_injected_processing.py  test_gui_api.py  test_gui_batch1.py  test_gui_dewatermark.py  test_gui_run_async.py  test_gui_settings.py  test_hardening.py  test_ingest_mixed_folder.py  test_job_store.py  test_lex_completeness.py  test_live_llm_lane.py  test_manifest_idempotency.py  test_operator_guidance.py  test_pipeline_batch.py  test_pipeline_progress.py  test_release_tag_version_check.py  test_source_store.py  test_spike_eval.py  test_state_machine.py  (+6 more)
tests/audit/: __init__.py  test_except_boundaries.py
tests/core/: test_asset_rules_safearea.py  test_grounding_cache.py  test_grounding_captions.py  test_sop_steps.py  test_template_lint.py  test_text_sanitize.py
tests/crawler/: test_contract.py  test_factory.py  test_ingest.py  test_net_guard.py
tests/e2e/: __init__.py  test_full_flow_signoff.py  test_happy_path_dedup.py  test_quickstart_sample.py  test_real_image_media_gate.py  test_recovery_paths.py  test_risk_redline.py
tests/gossip_scraper/: test_dedup.py  test_douyin.py  test_enrichers.py  test_health.py  test_ranking.py  test_trend.py
tests/llm/: test_assembler.py  test_client.py  test_copywriter.py  test_nli_grounding.py  test_templates.py
tests/media/: test_cover_checks.py  test_dewatermark_integration.py  test_ffprobe.py  test_ffprobe_parsing.py  test_normalizer.py  test_watermark.py
tests/processor/: test_dedup_index.py  test_draft_linter.py  test_gate_registry.py  test_lint_config_wiring.py  test_media_checker.py  test_media_fps_size_gate.py  test_sanitizer.py
tests/publisher/: test_notifier.py  test_review_packet.py  test_signoff.py
tests/rules/: test_asset_rules.py  test_dedup_rules.py  test_extraction.py  test_grounding.py  test_lint_rules.py  test_risk_rules.py
tests/spikes/: test_dewatermark_harness.py  test_make_mask.py
tests/support/: __init__.py  pipeline_fakes.py
(+66 files in other folders)
