[project]
name = "local-content-processor"
version = "0.1.0"
description = "Local content pipeline: crawl -> process -> review packet (MVP)"
requires-python = ">=3.11"
authors = [
    {name = "Eatmelon"},
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "click>=8,<9",
    "keyring>=25",
    "pyyaml>=6",
]

[project.urls]
Source = "https://github.com/redredchen02-rgb/local-content-processor"
Issues = "https://github.com/redredchen02-rgb/local-content-processor/issues"
Changelog = "https://github.com/redredchen02-rgb/local-content-processor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
crawl = ["scrapy>=2.16,<3"]
media = ["pillow>=12.2,<13"]
llm = ["openai>=2,<3"]
dedup = ["datasketch>=1.6"]
# The GUI is now a stdlib http.server webui (lcp.webserver), launched by
# `lcp gui` — it needs NO extra dependency. Kept (empty) so existing
# `pip install '.[...,gui]'` commands keep working; pywebview was removed.
gui = []
dev = ["pytest>=8", "mypy>=1.18,<2", "ruff>=0.11,<1", "types-PyYAML"]

[project.scripts]
lcp = "lcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lcp = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# gossip_scraper is excluded ONLY because it is mid-edit (parallel feature work
# entangles its tracked files with not-yet-committed modules). plan-003 R10
# brings it under the ruff + mypy gates once that work lands.
extend-exclude = ["gossip_scraper"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"spikes/*" = ["E501"]
"gossip_scraper/*" = ["E501"]
"src/lcp/pipeline.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

# --- Static type gate (two-tier) -------------------------------------------
# Global baseline = NON-STRICT but ENFORCED: the whole package is checked and
# must be error-free. The pure core, the orchestrator, and the I/O adapters
# (lcp.core.* / lcp.pipeline / lcp.adapters.*) are held to a strict bundle.
# Only the thin shells (cli.py / gui.py) stay at the non-strict baseline on
# purpose (Click/webview glue). RAMP: to tighten a shell, add it to the strict
# override module list below.
[tool.mypy]
python_version = "3.11"
files = ["src/lcp"]
# --strict's global-only flags live here (they cannot sit in a per-module
# override); the per-module-settable rest of --strict is in the lcp.core.* block.
warn_unused_configs = true
warn_redundant_casts = true
strict_bytes = true

# Strict bundle — the per-module-settable subset of --strict (the global-only
# flags above + this list = --strict's expansion). Enumerated rather than
# `strict = true` because mypy applies a per-override `strict` GLOBALLY (it would
# force strict onto the cli/gui shells too). Scoped to everything but the shells.
[[tool.mypy.overrides]]
module = ["lcp.core.*", "lcp.pipeline", "lcp.adapters.*"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["datasketch.*"]
ignore_missing_imports = true
