[project]
name = "local-content-processor"
version = "0.1.0"
description = "Local content pipeline: crawl -> process -> review packet (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Eatmelon"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
]

license = "MIT"
dependencies = [
    "pydantic>=2,<3",
    # Floor remediates GHSA-4xgf-cpjx-pc3j (surfaced by the pip-audit CI gate).
    "pydantic-settings>=2.14.2,<3",
    "click>=8,<9",
    "keyring>=25",
    "pyyaml>=6",
]

[project.urls]
Source = "https://github.com/redredchen02-rgb/local-content-processor"
Issues = "https://github.com/redredchen02-rgb/local-content-processor/issues"
Changelog = "https://github.com/redredchen02-rgb/local-content-processor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
crawl = ["scrapy>=2.16,<3"]
media = ["pillow>=12.2,<13"]
llm = ["openai>=2,<3"]
dedup = ["datasketch>=1.6"]
gossip = ["httpx>=0.27,<1"]
# The GUI is now a stdlib http.server webui (lcp.webserver), launched by
# `lcp gui` — it needs NO extra dependency. Kept (empty) so existing
# `pip install '.[...,gui]'` commands keep working; pywebview was removed.
gui = []
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.18,<2", "ruff>=0.11,<1", "types-PyYAML"]

[project.scripts]
lcp = "lcp.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lcp = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Coverage is collected only when `--cov` is passed (the CI `test` job); a plain
# `pytest` run is unaffected. The floor is a deliberately LOW soft gate (baseline
# was 93%): it catches a whole-module regression without red-building ordinary
# refactors. Ratchet upward over time, never down to mask a drop.
[tool.coverage.run]
source = ["lcp"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"spikes/*" = ["E501"]
"gossip_scraper/*" = ["E501"]
"src/lcp/pipeline.py" = ["E402"]

[tool.ruff.format]
docstring-code-format = true

# --- Static type gate (two-tier) -------------------------------------------
# Global baseline = NON-STRICT but ENFORCED: the whole package is checked and
# must be error-free. The pure core, the orchestrator, and the I/O adapters
# (lcp.core.* / lcp.pipeline / lcp.adapters.*) are held to a strict bundle.
# Only the thin shells (cli.py / gui.py) stay at the non-strict baseline on
# purpose (Click/webview glue). RAMP: to tighten a shell, add it to the strict
# override module list below.
[tool.mypy]
python_version = "3.11"
# `scripts/` holds release tooling outside the shipped package; it is type-checked
# (at the non-strict baseline — it does not match the strict-bundle globs below)
# so the version-sync release gate is covered by the gate, not just by its test.
files = ["src/lcp", "scripts", "gossip_scraper"]
# --strict's global-only flags live here (they cannot sit in a per-module
# override); the per-module-settable rest of --strict is in the lcp.core.* block.
warn_unused_configs = true
warn_redundant_casts = true
strict_bytes = true

# Strict bundle — the per-module-settable subset of --strict (the global-only
# flags above + this list = --strict's expansion). Enumerated rather than
# `strict = true` because mypy applies a per-override `strict` GLOBALLY (it would
# force strict onto the cli/gui shells too). Scoped to everything but the shells.
[[tool.mypy.overrides]]
module = ["lcp.core.*", "lcp.pipeline", "lcp.adapters.*"]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["datasketch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx"]
ignore_missing_imports = true
